feat:add automation workflow
