# docs/swagger.json
@@ -18,23 +18,21 @@
     "paths": {
         "/authentication/activate/{token}": {
             "put": {
-                "description": "Authenticate the user and return credentials token",
+                "description": "Activates/Register a user by invitation token",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "authentication"
                 ],
-                "summary": "Authenticate the User",
+                "summary": "Activates/Register a user",
                 "parameters": [
                     {
-                        "description": "User registration payload",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.RegisterUserPayload"
-                        }
+                        "type": "string",
+                        "description": "Invitation token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -651,6 +649,20 @@
                 }
             }
         },
+        "store.Role": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "store.User": {
             "type": "object",
             "properties": {
@@ -665,6 +677,9 @@
                 },
                 "is_activated": {
                     "type": "boolean"
+                },
+                "role": {
+                    "$ref": "#/definitions/store.Role"
                 },
                 "username": {
                     "type": "string"
